--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -8,10 +8,11 @@
 :uri-rel-file-base: link:{uri-repo}/blob/master
 :uri-rel-tree-base: link:{uri-repo}/tree/master
 :uri-calico: https://www.projectcalico.org/
-:uri-calico-policy: https://docs.projectcalico.org/v3.8/getting-started/kubernetes/installation/other
+:uri-calico-policy: https://docs.projectcalico.org/getting-started/kubernetes/flannel/flannel
 :uri-cert-manager: https://cert-manager.readthedocs.io/en/latest/
 :uri-docs: {uri-rel-file-base}/docs
 :uri-kubernetes-hpa: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+:uri-kubernetes-vpa: https://github.com/kubernetes/autoscaler/tree/master/vertical-pod-autoscaler
 :uri-metrics-server: https://github.com/kubernetes-incubator/metrics-server
 :uri-oci-images: https://docs.cloud.oracle.com/iaas/images/
 :uri-oci-kms: https://docs.cloud.oracle.com/iaas/Content/KeyManagement/Concepts/keyoverview.htm
@@ -29,7 +30,7 @@ Configuration Terraform Options:
 . link:#general-oci[General OCI]
 . link:#oci-networking[OCI Networking]
 . link:#bastion-host[Bastion Host]
-. link:#operator-host[Admin Host]
+. link:#operator-host[Operator Host]
 . link:#oke[OKE]
 . link:#oke-load-balancers[OKE Load Balancers]
 . link:#ocir[OCIR]
@@ -244,7 +245,13 @@ newbits = {
 |`bastion_shape`
 |The shape of bastion instance. *Required*
 |
-|VM.Standard.E2.1
+|`bastion_shape = {
+  # shape = "VM.Standard.E2.2"
+  shape            = "VM.Standard.E3.Flex",
+  ocpus            = 1,
+  memory           = 4,
+  boot_volume_size = 50
+}`
 
 |`bastion_timezone`
 |The preferred timezone for the bastion host. {uri-timezones}[List of timezones]. *Required*
@@ -253,7 +260,7 @@ newbits = {
 
 |===
 
-== Admin Host
+== Operator Host
 
 [stripes=odd,cols="1d,4d,3a,3a", options=header,width="100%"] 
 |===
@@ -305,7 +312,13 @@ newbits = {
 |`operator_shape`
 |The shape of operator instance. *Required*
 |
-|
+|`operator_shape = {
+  # shape = "VM.Standard.E2.2"
+  shape            = "VM.Standard.E3.Flex",
+  ocpus            = 1,
+  memory           = 4,
+  boot_volume_size = 50
+}`
 
 |`operator_timezone`
 |The preferred timezone for the operator host. {uri-timezones}[List of timezones]. *Required*
@@ -462,7 +475,7 @@ a|The number, shape of node pools and node_pool_size to create. Each key and tup
 * node_pool_size defines the number of worker nodes in each nodepool
 * boot_volume_size defines the custom boot volume size in GBs for the worker nodes.
 
-If an empty nodepool like np3 = {} is specified, then a nodepool will default values: 
+If an empty nodepool like np3 = {} is specified, then a nodepool will have the following default values: 
 
 * shape=VM.Standard.E3.Flex
 * ocpus=1
@@ -520,7 +533,7 @@ node_pools = {
 |`node_pool_os_version`
 |The corresponding version of the Operating System image to use to provision the worker nodes.
 |
-|7.8
+|7.9
 
 |`pods_cidr`
 |The CIDR for the Kubernetes POD network for flannel networking. CIDR blocks for pods must not overlap with the CIDR blocks for workers and load balancer subnets (calculated using vcn_cidr, newbits and subnets parameters).
@@ -621,11 +634,6 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |Values
 |Default
 
-|`calico_version`
-|Version of {uri-calico}[Calico] to install.
-|
-|3.12
-
 |`calico_enabled`
 |Whether to install {uri-calico}[Calico] as {uri-calico-policy}[pod network policy].
 |true/false
@@ -645,6 +653,17 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |Whether to install {uri-metrics-server}[Kubernetes Metrics Server]. *Required* for {uri-kubernetes-hpa}[Horizontal Pod Autoscaling].
 |true/false
 |false
+
+|`vpa`
+|Whether to install {uri-kubernetes-vpa}[Vertical Pod Autoscaler] and the version to install. *Requires*  {uri-metrics-server}[Kubernetes Metrics Server].
+|`vpa = {
+  enabled = true,
+  version = 0.8
+}`
+|`vpa = {
+  enabled = false,
+  version = 0.8
+}`
 |===
 
 == KMS integration
