--- a/docs/instructions.adoc
+++ b/docs/instructions.adoc
@@ -25,9 +25,12 @@
 :uri-oci-documentation: https://docs.cloud.oracle.com/iaas/Content/home.htm
 :uri-oci-instance-principal: https://docs.cloud.oracle.com/iaas/Content/Identity/Tasks/callingservicesfrominstances.htm
 :uri-oci-kms: https://docs.cloud.oracle.com/iaas/Content/KeyManagement/Concepts/keyoverview.htm
+:uri-oci-loadbalancer-annotations: https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/load-balancer-annotations.md
 :uri-oci-manage-dynamic-groups: https://docs.cloud.oracle.com/iaas/Content/Identity/Tasks/managingdynamicgroups.htm
 :uri-oci-manage-policies: https://docs.cloud.oracle.com/iaas/Content/Identity/Tasks/managingpolicies.htm
 :uri-oci-ocir: https://docs.cloud.oracle.com/iaas/Content/Registry/Concepts/registryoverview.htm
+:uri-oci-load-balancers: https://docs.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengcreatingloadbalancer.htm#Specifyi
+:uri-oci-oke-flexible-loadbalancers: https://medium.com/@lmukadam/creating-flexible-oci-load-balancers-with-oke-bd98e0318976
 :uri-oci-secret: https://docs.cloud.oracle.com/en-us/iaas/Content/KeyManagement/Tasks/managingsecrets.htm
 :uri-oci-authtoken: https://docs.cloud.oracle.com/iaas/Content/Registry/Tasks/registrygettingauthtoken.htm
 :uri-oci-waf: https://docs.cloud.oracle.com/en-us/iaas/Content/WAF/Concepts/overview.htm
@@ -73,6 +76,7 @@
 . link:#creating-a-service-account-for-cicd-tools[Creating a service account for CI/CD tools]
 . link:#enabling-waf[Monitor and Protect your application using OCI WAF]
 . link:#enabling-podsecuritypolicy[Enabling PodSecurityPolicy Admissions Controller]
+. link:#using-dynamic-and-flexible-load-balancers[Using Dynamic and Flexible Load Balancers]
 
 === Assumptions
 
@@ -349,3 +353,26 @@ Ensure you also read {uri-psp}[the documentation] before enabling it.
 
 ****
 N.B. This field is updatable. You can set to `true` and `false` and run terraform apply again.
+****
+
+=== Using Dynamic and Flexible Load Balancers
+
+When you create a service of type LoadBalancer, by default, an OCI Load Balancer with dynamic shape 100Mbps will be created.
+
+You can override this shape by using the {uri-oci-loadbalancer-annotations}[OCI Load Balancer Annotations]. In order to keep using the dynamic shape but change the available total bandwidth to 400Mbps, use the following annotation on your LoadBalancer service:
+
+`service.beta.kubernetes.io/oci-load-balancer-shape: "400Mbps"`
+
+You can also change the shape to flexible and set a minimum and maximum bandwidth:
+
+```
+service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
+service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: 50
+service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: 200
+```
+
+Review the following documentation and articles on creating load balancers of different shapes using Ingress Controllers:
+
+* {uri-oci-load-balancers}[Specifying Alternative Load Balancer Shapes]
+
+* {uri-oci-oke-flexible-loadbalancers}[Creating flexible OCI Load Balancers with OKE]
