new variable added signedimage_key_id

--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -701,7 +701,12 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |false
 
 |`existing_key_id`
-|id of existing KMS key. *Required* if _use_encryption_ is set to *true* or _use_signed_images_ is set to *true* 
+|id of existing KMS key. *Required* if _use_encryption_ is set to *true*
+|
+|
+
+|`signedimage_key_id`
+|id of existing KMS key. *Required* if _use_signed_images_ is set to *true* 
 |
 |
 |===
