--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -7,6 +7,73 @@ All notable changes to this project are documented in this file.
 
 The format is based on {uri-changelog}[Keep a Changelog].
 
+= Unreleased
+
+=== Additions
+
+* Added support for VCN native endpoint for Kubernetes
+** Added a subnet for control plane (#270)
+** Added 2 parameters (cluster_access and cluster_source) to control access to Kubernetes API endpoint (#270)
+
+=== Changes
+
+* Changed base module version to 2.2.0. This allows choosing between Oracle Linux 7.X or 8 for the operator host as well as supporting custom route rules on the NAT gateway route table (#279). Custom route rules will make hybrid deployment easier to manage.
+* Reworked the subnet boundaries for bastion and operator hosts (#270)
+* Updated and simplified OKE security lists to support VCN native endpoints (#270)
+* All port numbers and stateless are now in integer and boolean formats respectively (#270)
+* Updated default Kubernetes version to v 1.19.7
+* Updated documentation and topology diagrams
+* Fixed incorrect namespace issue when creating secret for OCIR (#267)
+* Narrow permissions for kubeconfig file 
+
+=== Deletions
+Removed hardcoded WAF CIDRs and used data source instead.
+
+= 3.1.0 (April 6, 2021)
+
+=== Additions 
+
+* Added documentation for using flexible load balancer (#256)
+* Added ability to specify node_pool_os_version (#266)
+* Added egress as bugfix for issue #261
+* Allowed traffic from VCN to reach internal load balancer (#261)
+*Added ignore node pool image id to lifecycle_ignore change so the node pool is not destroyed 
+* Added ability to specify node_pool_os_version (#266)
+
+=== Changes
+
+* Used oci_containerengine_node_pool_option to look up images for node pool (#258)
+* Updated default kubernetes version to v1.19.7, fixed deprecated interpolation-only expressions
+* Updated description for tenancy id
+
+=== Deletions
+
+* Now looking up object storage namespace for ocirsecret instead of having to pass as variable
+* Removed deprecated helm repos
+* Removed tenancy_name
+
+= 3.0.0 (January 14, 2021)
+
+=== Additions
+
+* Added support for Terraform 0.13 (#245 )
+* Added support for Flex shapes (#216)
+* Added support for custom boot volume size for node pool (#202)
+* Added support for custom memory for node pool (#234)
+* Added support for Cardiff (#230), Dubai (#220), San Jose (#219), and Santiago (#219) regions
+* Added dynamically generated suffix to dynamic group name to prevent dynamic group creation from failing (#231)
+* Added support for Vertical Pod Autoscaling (#254)
+
+=== Changes
+
+* Allowed secret name for OCIR to be configurable (#218)
+* Changes in terraform.tfvars.example file to reflect added support for custom boot volume size and memory
+* OSMS disabled on operator to enable helm installation from yum olcne repo (#224)
+* Updated IAM requirements documentation (#108)
+* Upgrade base module to 2.0.0 (#252)
+* Updated default Kubernetes module to 1.18.10
+* Updated and simplified Calico installation (#253)
+
 = 2.3.3 (October 30, 2020)
 * Upgraded base module to 1.3.3 to temporarily disable OSMS as fix for #225
 
