--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -637,7 +637,7 @@ node_pools = {
 |`10.96.0.0/16`
 
 |`use_signed_images`
-|To enforce use of signed images from oracle registry.
+|Whether to enforce the use of signed images. If set to true, at least 1 RSA key must be provided through image_signing_keys.
 |true/false
 |false
 
@@ -773,12 +773,13 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 |`existing_key_id`
 |id of existing KMS key. *Required* if _use_encryption_ is set to *true*
-|
+|`ocid1.key.oc1....`
 |
 
 |`image_signing_keys`
-|list of existing KMS key id. *Required* if _use_signed_images_ is set to *true* 
+|A list of KMS key ids used by the worker nodes to verify signed images. The keys must use RSA algorithm. *Required* if _use_signed_images_ is set to *true* 
 |
+`["ocid1.key.oc1....", "ocid1.key.oc1...."]`
 |
 |===
 
