--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -636,6 +636,11 @@ node_pools = {
 |
 |`10.96.0.0/16`
 
+|`use_signed_images`
+|Whether to enforce the use of signed images. If set to true, at least 1 RSA key must be provided through image_signing_keys.
+|true/false
+|false
+
 |`worker_mode`
 |Whether the worker nodes should be public or private. Private requires NAT gateway.
 |private/public
@@ -768,7 +773,13 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 |`existing_key_id`
 |id of existing KMS key. *Required* if _use_encryption_ is set to *true*
+|`ocid1.key.oc1....`
 |
+
+|`image_signing_keys`
+|A list of KMS key ids used by the worker nodes to verify signed images. The keys must use RSA algorithm. *Required* if _use_signed_images_ is set to *true* 
+|
+`["ocid1.key.oc1....", "ocid1.key.oc1...."]`
 |
 |===
 
