--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -565,6 +565,7 @@ a|The number, shape of node pools and node_pool_size to create. Each key and tup
 * memory defines the amount of memory in GBs that will be used if VM.Standard.E3.Flex shape is used
 * node_pool_size defines the number of worker nodes in each nodepool
 * boot_volume_size defines the custom boot volume size in GBs for the worker nodes.
+* label defines the initial node labels to use for the nodepool
 
 If an empty nodepool like np3 = {} is specified, then a nodepool will have the following default values: 
 
@@ -579,7 +580,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 [source]
 node_pools = {
   np1 = {shape="VM.Standard.E3.Flex",ocpus=2,memory=20,node_pool_size=2,boot_volume_size=150}
-  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
+  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150,label={app="application"}}
   np3 = {shape="VM.Standard.E2.2",node_pool_size=1} 
 }
  
@@ -587,7 +588,7 @@ node_pools = {
 [source]
 node_pools = {
   np1 = {shape="VM.Standard.E3.Flex",ocpus=2,node_pool_size=2,boot_volume_size=150}
-  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150}
+  np2 = {shape="VM.Standard.E2.2",node_pool_size=2,boot_volume_size=150,label={app="application"}}
   np3 = {shape="VM.Standard.E2.2",node_pool_size=1}
 }
 
