--- a/CONTRIBUTORS.adoc
+++ b/CONTRIBUTORS.adoc
@@ -1,6 +1,6 @@
 == GitHub userids of contributors
 
-OWNERS # have admin access and can merge code to master:
+OWNERS # have admin access and can merge code to main:
 
 - @hyder
 - @markxnelson
