--- a/docs/quickstart.adoc
+++ b/docs/quickstart.adoc
@@ -6,8 +6,8 @@
 
 
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
-:uri-rel-file-base: link:{uri-repo}/blob/master
-:uri-rel-tree-base: link:{uri-repo}/tree/master
+:uri-rel-file-base: link:{uri-repo}/blob/main
+:uri-rel-tree-base: link:{uri-repo}/tree/main
 :uri-docs: {uri-rel-file-base}/docs
 :uri-instructions: {uri-docs}/instructions.adoc
 :uri-oci-keys: https://docs.cloud.oracle.com/iaas/Content/API/Concepts/apisigningkey.htm
