--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -5,8 +5,8 @@
 :sectnums:
 :uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 
-:uri-rel-file-base: link:{uri-repo}/blob/master
-:uri-rel-tree-base: link:{uri-repo}/tree/master
+:uri-rel-file-base: link:{uri-repo}/blob/main
+:uri-rel-tree-base: link:{uri-repo}/tree/main
 :uri-calico: https://www.projectcalico.org/
 :uri-calico-policy: https://docs.projectcalico.org/getting-started/kubernetes/flannel/flannel
 :uri-cert-manager: https://cert-manager.readthedocs.io/en/latest/
