--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -288,7 +288,7 @@ newbits = {
 |XYZ.XYZ.XYZ.XYZ/YZ
 |ANYWHERE
 
-|`bastion_enabled`
+|`create_bastion_host`
 |Whether to create the bastion host.
 |true/false
 |true
@@ -298,7 +298,7 @@ newbits = {
 |image_id or Autonomous. If the value is set to 'Autonomous', an Oracle Autonomous Linux Platform image will be used instead. If you want to use a custom image, set the image id instead.
 |Autonomous
 
-|`bastion_notification_enabled`
+|`enable_bastion_notification`
 |Whether to enable ONS notification for the bastion host.
 |true/false
 |true
@@ -318,7 +318,7 @@ newbits = {
 |
 |bastion
 
-|`bastion_operating_system_version`
+|`bastion_os_version`
 |In case Autonomous Linux is used, allow specification of Autonomous version.
 |7.9
 |7.9
@@ -360,7 +360,7 @@ newbits = {
 |Values
 |Default
 
-|`operator_enabled`
+|`create_operator`
 |Whether to create the operator host.
 |true/false
 |true
@@ -375,7 +375,7 @@ newbits = {
 |true/false
 |true
 
-|`operator_notification_enabled`
+|`enable_operator_notification`
 |Whether to enable ONS notification for the operator host. *Do not enable for now*.
 |true/false
 |false
