--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -234,7 +234,7 @@ create_bastion_host = true
 create_operator = true
 operator_instance_principal = true
 use_encryption = true
-existing_key_id = <existing_key_id>
+kms_key_id = <kms_key_id>
 ----
 
 OKE also supports enforcing the use of signed images. You can enforce the use of signed image using the following parameters:
