--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -205,10 +205,10 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 The {uri-oci-authtoken}#[Auth Token] must first be manually created and stored in {uri-oci-secret}#[OCI Secret in Vault]. It will subsequently be used to create a Kubernetes secret, which can then be used as an imagePullSecrets in a deployment. If you do not need to use private OCIR repositories, then leave the *secret_id* parameter empty. Refer to the {uri-instructions}#creating-a-secret-for-ocir[instructions] for how to create the Auth Token and the Secret in Vault.
 
-The secret is created in the kube-system namespace. To copy it to your namespace, use the following command:
+The secret is created in the "default" namespace. To copy it to your namespace, use the following command:
 
 ----
-kubectl --namespace=kube-system get secret ocirsecret --export -o yaml | kubectl apply --namespace=<newnamespace> -f -
+kubectl --namespace=default get secret ocirsecret --export -o yaml | kubectl apply --namespace=<newnamespace> -f -
 ----
 
 {uri-terraform-options}#ocir[Reference]
